[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/PawnRig.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/AINPC.gd" type="Script" id=2]

[node name="AINPC" type="Node2D"]
script = ExtResource( 2 )
WaitingTurnRate = 1.0

[node name="PawnRig" parent="." instance=ExtResource( 1 )]

[node name="VisionCone" type="Area2D" parent="."]
position = Vector2( 0, -0.396851 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VisionCone"]
polygon = PoolVector2Array( 0, 0, 150, 300, -150, 300 )
[connection signal="body_entered" from="VisionCone" to="." method="_on_object_seen"]
[connection signal="body_exited" from="VisionCone" to="." method="_on_object_leave_vision"]
